--- a/frontend/src/main/resources/html/task_report.html
+++ b/frontend/src/main/resources/html/task_report.html
@@ -40,6 +40,15 @@
                 font-size: 30px;
                 padding-left: 40px;
             }
+            .file-upload input[type='file'] {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                opacity: 0;
+                cursor: pointer;
+            }
         </style>
     </head>
     <body class="bg-orange-50">
@@ -55,7 +64,9 @@
                 <span class="ml-6" id="status-message">ステータスメッセージの表示</span>
             </div>
                 <form action="#" method="post" class="flex flex-col items-center mt-24 ml-16 mr-16 pl-8 pr-8 w-9/12 h-4/6">
-                    <div class="rounded-3xl border-4 w-full h-3/6 bg-gray-300 flex justify-center items-center">
+                    <!-- 画像アップロード -->
+                    <div class="file-upload rounded-3xl border-4 w-full h-3/6 bg-gray-300 flex justify-center items-center">
+                        <input class="" type="file" onchange="readURL(this);" accept=""/>
                         <img src="/frontend/images/add_image.png" alt="Add Image" class="" id="image-preview"/>
                     </div>
                     <!-- テキストエリア　-->
@@ -66,5 +77,30 @@
                     </div>
                 </form>
         </main>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script>
+            function readURL(input) {
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
+                    reader.onload = function(e) {
+                        $('#image-preview').attr('src', e.target.result).removeClass('hidden');
+                        $('.placeholder').hide();
+                    };
+                    reader.readAsDataURL(input.files[0]);
+                } else {
+                    removeUpload();
+                }
+            }
+
+            function removeUpload() {
+                $('#image-preview').attr('src', '/frontend/images/add_image.png').addClass('hidden');
+                $('.placeholder').show();
+                $('.file-upload input[type="file"]').val('');
+            }
+
+            $('.file-upload').on('click', function() {
+                $(this).find('input[type="file"]').trigger('click');
+            });
+        </script>
     </body>
 </html>
