画像の追加

--- a/frontend/src/main/resources/html/setting_user/new_user.html
+++ b/frontend/src/main/resources/html/setting_user/new_user.html
@@ -22,6 +22,7 @@
         footer {
             height: 30%;
         }
+        
     </style>
 </head>
 
@@ -35,10 +36,14 @@
         <p class="text-6xl mt-36 mb-28 text-center">新規登録</p>
         <div class="grid justify-center ">
             <button
-                class="mr-auto ml-auto text-center mt-16 text-4xl bg-orange-300 font-light w-fit pt-10 pb-10 pr-28 pl-28">Lineで登録</button>
+                class="flex mr-auto ml-auto text-center mt-16 text-4xl bg-orange-300 font-medium w-fit pt-10 pb-10 pr-28 pl-28">
+                <img src="/frontend/images/Rectangle 56.png" alt="line">Lineで登録
+            </button>
             <p class="text-3xl mt-7 text-center text-gray-400">-------------------または-------------------</p>
             <button
-                class="ml-auto mr-auto mt-16 text-4xl bg-green-400 font-light w-fit pt-10 pb-10 pr-28 pl-28">Googleで登録</button>
+                class="flex ml-auto mr-auto mt-16 text-4xl bg-green-400 font-medium w-fit pt-10 pb-10 pr-28 pl-28">
+                <img src="/frontend/images/image.png" alt="line">
+                Googleで登録</button>
             <p class="text-3xl mt-9 text-center">「登録」をクリックすると、利用規約とプライバシーポリシーに同意したことになります。</p>
         </div>
     </main>
