--- a/frontend/src/main/resources/html/setting_user/new_user.html
+++ b/frontend/src/main/resources/html/setting_user/new_user.html
@@ -6,23 +6,81 @@
     <title>新規登録画面</title>
     <link rel="stylesheet" href="/frontend/src/main/resources/static/setting_user/new_user.css">
     <style>
-        body {
-            height: 100vh;
-            overflow-y: hidden;
+        /* ボタン */
+        /* ボタンの箱の形 */
+        .login-button {
+            width: 100%;
+            height: 60px;
+            background-color: WHITE;
+            margin: 10px 0;
+            border: 1px solid #747775;
+            border-radius: 30px;
+            box-sizing: border-box;
+            color: #333;
+            cursor: pointer;
+            font-family: 'Roboto', arial, sans-serif;
+            font-size: 14px;
+            letter-spacing: 2px;
+            padding: 0px 20px;
+            position: relative;
+            text-align: center;
+            transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
+            vertical-align: middle;
+            white-space: nowrap;
+            max-width: 400px;
         }
 
-        header {
-            height: 20%;
+        /* アイコンのサイズ */
+        .login-button .login-button-icon {
+            height: 20px;
+            margin-right: 20px;
+            min-width: 20px;
+            width: 20px;
         }
 
-        main {
-            height: 50%;
+        /* ボタン内のテキストの配置 */
+        .login-button .login-button-content-wrapper {
+            align-items: center;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            height: 100%;
+            justify-content: space-between;
+            position: relative;
+            width: 100%;
         }
 
-        footer {
-            height: 30%;
+        /* ボタン内のテキストのフォント */
+        .login-button .login-button-contents {
+            flex-grow: 1;
+            font-family: 'Roboto', arial, sans-serif;
+            font-weight: 500;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            vertical-align: top;
         }
-        
+
+        /* ボタン内の状態 */
+        .login-button .login-button-state {
+            opacity: 0;
+            position: absolute;
+            border-radius: 60px;
+        }
+
+        .login-button:disabled .login-button-contents {
+            opacity: 38%;
+        }
+
+        .login-button:disabled .login-button-icon {
+            opacity: 38%;
+        }
+
+        /* タイトルとボタンの間のスペース */
+        .social-media {
+            margin-top: 50px;
+            margin-bottom: 20px;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -35,15 +93,46 @@
     <main class="p-10 ">
         <p class="text-6xl mt-36 mb-28 text-center">新規登録</p>
         <div class="grid justify-center ">
-            <button
-                class="flex mr-auto ml-auto text-center mt-16 text-4xl bg-orange-300 font-medium w-fit pt-10 pb-10 pr-28 pl-28">
-                <img src="/frontend/images/Rectangle 56.png" alt="line">Lineで登録
-            </button>
+            <!-- Googleログインボタン -->
+            <a href="#" class="google-icon social-media">
+                <div class="google">
+                    <button class="login-button gsi-material-button" id="google-btn">
+                        <div class="login-button-state"></div>
+                        <div class="login-button-content-wrapper">
+                            <div class="login-button-icon">
+                                <svg width="24" height="24" viewBox="-3 0 262 262" xmlns="http://www.w3.org/2000/svg"
+                                    preserveAspectRatio="xMidYMid">
+                                    <!-- Googleのアイコン -->
+                                </svg>
+                            </div>
+                            <span class="login-button-contents">Google でログイン</span>
+                        </div>
+                    </button>
+                </div>
+            </a>
+
+            <!-- または -->
             <p class="text-3xl mt-7 text-center text-gray-400">-------------------または-------------------</p>
-            <button
-                class="flex ml-auto mr-auto mt-16 text-4xl bg-green-400 font-medium w-fit pt-10 pb-10 pr-28 pl-28">
-                <img src="/frontend/images/image.png" alt="line">
-                Googleで登録</button>
+
+            <!-- Lineログインボタン -->
+            <a href="#" class="line-icon social-media">
+                <div class="line">
+                    <button onclick="gotoLink(this)" class="login-button gsi-material-button"
+                        value="https://www.line.com/">
+                        <div class="login-button-state"></div>
+                        <div class="login-button-content-wrapper">
+                            <div class="login-button-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#3ace01"
+                                    class="bi bi-line" viewBox="0 0 24 24">
+                                    <!-- Lineのアイコン -->
+                                </svg>
+                            </div>
+                            <span class="login-button-contents">Line でログイン</span>
+                        </div>
+                    </button>
+                </div>
+            </a>
+
             <p class="text-3xl mt-9 text-center">「登録」をクリックすると、利用規約とプライバシーポリシーに同意したことになります。</p>
         </div>
     </main>
