--- a/backend/nginx/statics/index.html
+++ b/backend/nginx/statics/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>テスト</title>
+    <title>Document</title>
 </head>
+
 <body>
-    <h1 id="status_h1"></h1>
-    <button id="logout_btn">ログアウト</button>
-    <a href="/auth/discord?redirect_url=/statics/">ログイン (discord)</a>
-    
+    <h1>hello world</h1>
+    <div style="display: flex;">
+        <a href="/auth/oauth/discord" style="margin: 10px;">discord</a>
+        <a href="/auth/oauth/microsoftonline" style="margin: 10px;">microsoft</a>
+        <a href="/auth/oauth/google" style="margin: 10px;">google</a>
+        <button onclick="Update()" id="updateing_button" style="margin: 10px;">更新</button>
+        <button onclick="Logout()" style="margin: 10px;">ログアウト</button>
+
+        <input type="file" name="" id="uicon_upload" accept="image/*">
+
+        <hr>
+
+        <button onclick="AuthTest()" style="margin: 10px;">認証テスト</button>
+        <button onclick="AccessToken()" style="margin: 10px;">トークン取得</button>
+    </div>
+
+    <img src="" id="usericon" width="256px" alt="">
+
+    <script src="./scripts/sdk.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
+
 </html>
