タスクタイトルの追加と背景の色を修正

--- a/frontend/src/main/resources/html/task_info.html
+++ b/frontend/src/main/resources/html/task_info.html
@@ -171,7 +171,7 @@
             
         </style>
     </head>
-    <body class="bg-orange-50">
+    <body class="bg-orange-100">
         <!-- header要素 -->
         <header class="h-40 bg-orange-100 flex items-center">
             <!-- ハンバーガーメニュー -->
@@ -198,8 +198,12 @@
         </header>
         <!-- main要素 -->
         <main class="flex flex-col items-center">
+            <!-- タスクタイトル表示 -->
+            <div class="flex justify-center items-end h-1/6 pb-4">
+                <h1 class="text-8xl text-orange-500 font-bold flex justify-center items-end">タスクのタイトル</h1>
+            </div>
             <!-- 現在のステータスを表示 -->
-            <div class="flex border-orange-100 bg-orange-100 border-4 mt-16 w-4/5 h-52 items-center rounded-3xl">
+            <div class="flex border-orange-200 bg-orange-200 border-4 mt-16 w-4/5 h-52 items-center rounded-3xl">
                 <span class="material-icons text-orange-500 ml-12">notifications</span>
                 <span class="ml-6" id="status-message">ステータスメッセージの表示</span>
             </div>
