画像をコンテナのサイズ調整して表示

--- a/frontend/src/main/resources/html/task_report.html
+++ b/frontend/src/main/resources/html/task_report.html
@@ -184,13 +184,32 @@
                 font-size: 30px;
                 padding-left: 40px;
             }
+            .file-upload {
+                position: relative;
+                border: 4px solid #ccc;
+                border-radius: 30px;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                overflow: hidden;
+                background-color: #e0e0e0;
+                border-radius: 3xl;
+            }
             .file-upload input[type='file'] {
+                position: absolute;
                 top: 0;
                 left: 0;
                 width: 100%;
                 height: 100%;
                 opacity: 0;
                 cursor: pointer;
+            }
+            .file-upload img {
+                max-width: 100%;
+                max-height: 100%;
+                object-fit: contain;
             }
         </style>
     </head>
@@ -239,12 +258,12 @@
             </div>
                 <form action="#" method="post" class="flex flex-col items-center mt-10 ml-16 mr-16 pl-8 pr-8 w-9/12 h-4/6">
                     <!-- 画像アップロード -->
-                    <div class="file-upload rounded-3xl border-4 w-full h-3/6 bg-gray-300 flex justify-center items-center">
+                    <div class="file-upload">
                         <input class="" type="file" onchange="readURL(this);" accept=""/>
-                        <img src="/frontend/images/add_image.png" alt="Add Image" class="absolute" id="image-preview"/>
+                        <img src="/frontend/images/add_image.png" alt="Add Image" class="" id="image-preview"/>
                     </div>
                     <!-- テキストエリア　-->
-                    <input type="text" name="message" placeholder="伝えること" class="rounded-3xl w-full mt-16 mb-1 mr-auto ml-auto h-24 items-center"/>
+                    <input type="text" name="message" placeholder="伝えること" class="rounded-3xl w-full mt-16 mb-1 mr-auto ml-auto h-40 items-center"/>
                     <!-- ボタン　-->>
                     <div class="flex justify-between mt-56 mb-1">
                         <button class="back-btn text-center mr-20">戻る</button>
@@ -269,7 +288,9 @@
                 if (input.files && input.files[0]) {
                     var reader = new FileReader();
                     reader.onload = function(e) {
-                        document.getElementById('image-preview').src = e.target.result;
+                        var imagePreview = document.getElementById('image-preview');
+                        imagePreview.src = e.target.result;
+                        imagePreview.classList.add('uploaded object-contain'); // アップロードされた画像のクラスを追加
                     };
                     reader.readAsDataURL(input.files[0]);
                 } else {
@@ -278,7 +299,9 @@
             }
     
             function removeUpload() {
-                document.getElementById('image-preview').src = '/frontend/images/add_image.png';
+                var imagePreview = document.getElementById('image-preview');
+                imagePreview.src = '/frontend/images/add_image.png';
+                imagePreview.classList.remove('uploaded object-contain'); // アップロードされた画像のクラスを削除
                 document.querySelector('.file-upload input[type="file"]').value = '';
             }
     
