タイトル、ボタンなどの表示・配置の仮決定

--- a/frontend/src/main/resources/html/group_overview.html
+++ b/frontend/src/main/resources/html/group_overview.html
@@ -150,6 +150,16 @@
                 transform: translateX(0);
                 /* 画面幅の30%にメニューを表示 */
             }
+            .remove-btn {
+                background-color: #FFCCC0; /* ボタンの背景色 */
+                border-bottom: 4px solid #FFA07A; /* 下線の色 */
+                box-shadow: 0.1em 0.1em 3px rgba(0, 0, 0, 0.5); /* 影の設定 */
+                width: 400px; 
+                height: 100px;
+                border: none;
+                border-radius: 30px;
+                font-size: 40px;
+            }
         </style>
     </head>
     <body class="bg-orange-100">
@@ -177,8 +187,22 @@
                 <img class="w-24 h-24 bg-white rounded-full" src="/frontend/images/icon.png" alt="icon" />
             </div>
         </header>
-        <main>
-            <!-- メンバーリスト -->
+        <main class="bg-orange-100">
+            <h1 class="text-orange-500 text-8xl text-center m-12">グループ管理</h1>
+            <!-- ボタン -->
+            <div class="flex justify-end mt-20 mr-10">
+                <button class="remove-btn text-center">グループから抜ける</button>
+            </div>
+            <!-- メンバー一覧 -->
+            <h2 class="text-7xl border-4 bg-orange-200 mt-20 ml-10 w-2/5">メンバー一覧</h2>
+            <div class="h-2/5">
+                <!-- メンバーの表示　-->
+            </div>
+            <!-- 管理者一覧 -->
+            <h2 class="text-7xl border-4 bg-orange-200 ml-10 w-2/5">管理者一覧</h2>
+            <div class="h-2/6">
+                <!-- 管理者の表示 -->
+            </div>
         </main>
         <script>
             $(function () {
