サンプルデータの表示

--- a/frontend/src/main/resources/html/group_overview.html
+++ b/frontend/src/main/resources/html/group_overview.html
@@ -195,12 +195,12 @@
             </div>
             <!-- メンバー一覧 -->
             <h2 class="text-7xl border-4 bg-orange-200 mt-20 ml-10 w-2/5">メンバー一覧</h2>
-            <div class="h-2/5">
+            <div id="members-container" class="h-2/5 pt-20">
                 <!-- メンバーの表示　-->
             </div>
             <!-- 管理者一覧 -->
             <h2 class="text-7xl border-4 bg-orange-200 ml-10 w-2/5">管理者一覧</h2>
-            <div class="h-2/6">
+            <div id="observer-container" class="h-2/6 pt-20">
                 <!-- 管理者の表示 -->
             </div>
         </main>
@@ -210,6 +210,44 @@
                     $('.menu').toggleClass('open'); // メニューにopenクラスをつけ外しする
                     $('.btn-line').toggleClass('open'); // バーガーの線にopenクラスをつけ外しする
                 });
+            });
+            
+            // サンプルデータ
+            const members = [
+                { name: 'Aさん', role: 'メンバー' },
+                { name: 'Bさん', role: '管理者' },
+                { name: 'Cさん', role: 'メンバー' },
+                { name: 'Dさん', role: '管理者' },
+                { name: 'Eさん', role: 'メンバー' }
+            ];
+
+            const membersContainer = document.getElementById('members-container');
+
+            members.forEach(member => {
+                const membersDiv = document.createElement('div');
+                membersDiv.className = 'flex items-center mb-10 ml-52 relative';
+
+                const name = document.createElement('p');
+                name.textContent = member.name;
+                name.className = 'text-6xl';
+
+                membersDiv.appendChild(name);
+                membersContainer.appendChild(membersDiv);
+            });
+            const observerContainer = document.getElementById('observer-container');
+
+            members.forEach(member => {
+                const observerDiv = document.createElement('div');
+                observerDiv.className = 'flex items-center mb-10 ml-52 relative';
+
+                if(member.role === '管理者') {
+                const name = document.createElement('p');
+                name.textContent = member.name;
+                name.className = 'text-6xl';
+
+                observerDiv.appendChild(name);
+                observerContainer.appendChild(observerDiv);
+                }
             });
         </script>
     </body>
