入力フォームの文字開始位置の調整

--- a/frontend/src/main/resources/html/task_report.html
+++ b/frontend/src/main/resources/html/task_report.html
@@ -180,8 +180,8 @@
                 border-radius: 30px;
                 font-size: 40px;
             }
-            input::placeholder{
-                font-size: 30px;
+            input {
+                font-size: 36px;
                 padding-left: 40px;
             }
             .file-upload {
