--- a/frontend/src/main/resources/html/join/invitation_code.html
+++ b/frontend/src/main/resources/html/join/invitation_code.html
@@ -3,30 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>新規登録画面</title>
+    <title>参加画面</title>
     <link rel="stylesheet" href="/frontend/src/main/resources/static/join/invitation_code.css">
     <style>
-        
+        body {
+            background-color: rgba(246, 219, 186, 0.5);
+
+        }
     </style>
 </head>
 
-<body class="bg-orange-100  m-0 p-0 ">
-    <!-- title -->
-    <header class="pr-24 pl-24 pt-52">
-        <h1 class="text-8xl text-center mt-24 text-orange-600 font-bold">分担ちゃん</h1>
-    </header>
+<body class="flex justify-center items-center h-screen ">
+
     <!-- main -->
-    <main class="p-10 ">
-        <p class="text-6xl mt-36 mb-28 text-center">招待コードを入力してください</p>
-        <div>
-            <input type="text">
-            <button class="text-6xl bg-orange-300 font-light w-fit pt-10 pb-10 pr-28 pl-28">参加</button>
+    <main class="text-center h-full w-full">
+        <a href="#"><img class="ml-10 mt-7 w-9 h-12" src="/frontend/images/back.png" alt="戻る"></a>
+        <p class="text-6xl mt-48 mb-8 text-orange-500">招待コードを入力してください</p>
+        <div class="w-auto">
+            <input class="mt-24 text-3xl font-light w-4/5 h-24 rounded-3xl" type="text">
+            <button class="mt-16 text-6xl bg-red-200 font-light px-12 py-6 rounded-xl">参加</button>
         </div>
-        
+        <p class="text-5xl mt-32 top-1/2text-center">------------または------------</p>
+        <div>
+            <p class="text-6xl mt-48 mb-8 text-orange-500">QRコードを読み取り</p>
+            <button class="mt-24 text-6xl bg-red-200 font-light px-12 py-6 rounded-xl">カメラを起動</button>
+        </div>
+
     </main>
-    <footer class="p-1">
-        <img class="w-full h-auto " src="/frontend/images/Fuzzy Friends Plein Air Painting Trip.png" alt="下の画像">
-    </footer>
 </body>
 
 </html>
