--- a/frontend/src/main/resources/html/point_mgmt.html
+++ b/frontend/src/main/resources/html/point_mgmt.html
@@ -192,7 +192,7 @@
             <div class="items-center border-l-orange-200 bg-orange-200 boorder-4 w-4/5 h-4/6 mr-auto ml-auto rounded-3xl">
                 <h2 class="text-center text-orange-500 text-7xl pt-12">ランキング</h2>
                 <!-- ランキングコンテナ -->
-                    <div id="ranking" class="h-5/6 w-4/5 mt-16 mr-auto ml-auto">
+                    <div id="ranking" class="h-5/6 w-4/5 mt-16 mr-auto ml-auto overflow-y-scroll">
                         <!-- ランキングの表示-->
                     </div>
                 <div>
