グループ名の入力欄の調節

--- a/frontend/src/main/resources/html/setting_user/group_name.html
+++ b/frontend/src/main/resources/html/setting_user/group_name.html
@@ -8,7 +8,70 @@
     <style>
         body {
             background-color: rgba(246, 219, 186, 0.5);
+        }
 
+        /* グループ名作成時のアニメーション */
+
+        .cp_input_text {
+            position: relative;
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        .cp_input_text input[type='text'] {
+            font: 40px/24px sans-serif;
+            box-sizing: border-box;
+            width: 100%;
+            letter-spacing: 1px;
+            padding-left: 4em;
+        }
+
+        .cp_input_text input[type='text']:focus {
+            outline: none;
+        }
+
+        .ef {
+            padding: 4px 0;
+            border: 0;
+            margin-top: 10px;
+            border-bottom: 1px solid #E07448;
+            background-color: transparent;
+        }
+
+        .ef~.focus_line {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            transition: 0.4s;
+            background-color: #E07448;
+        }
+
+        .ef:focus~.focus_line,
+        .cp_input_text.ef~.focus_line {
+            width: 100%;
+            transition: 0.4s;
+        }
+
+        .ef~label {
+            position: absolute;
+            z-index: -1;
+            top: 4px;
+            left: 0;
+            width: 100%;
+            transition: 0.3s;
+            letter-spacing: 0.5px;
+            color: #E07448;
+        }
+
+        .ef:focus~label,
+        .cp_input_text.ef~label {
+            font-size: 12px;
+            top: -16px;
+            transition: 0.3s;
+            color: #E07448;
+            font-size: x-large;
         }
     </style>
 </head>
@@ -16,19 +79,23 @@
 <body class="flex justify-center items-center h-screen ">
 
     <!-- main -->
-    <main class="text-center h-full w-full">
+    <main class="h-full w-full">
         <a href="#"><img class="ml-10 mt-7 w-9 h-12" src="/frontend/images/back.png" alt="戻る"></a>
-        <p class="text-6xl mt-48 mb-8 text-orange-500">招待コードを入力してください</p>
-        <div class="w-auto">
-            <input class="mt-24 text-3xl font-light w-4/5 h-24 rounded-3xl" type="text">
-            <button class="mt-16 text-6xl bg-red-200 font-light px-12 py-6 rounded-xl">参加</button>
-        </div>
-        <p class="text-5xl mt-32 top-1/2text-center">------------または------------</p>
-        <div>
-            <p class="text-6xl mt-48 mb-8 text-orange-500">QRコードを読み取り</p>
-            <button class="mt-24 text-6xl bg-red-200 font-light px-12 py-6 rounded-xl">カメラを起動</button>
+        <!-- グループ名の作成 -->
+        <p class="text-6xl mt-48 mb-24 text-center text-orange-500">グループ名を入力してください</p>
+        <!-- 入力 -->
+        <div class="cp_input_text">
+            <input class="ef text-4xl" type="text" placeholder="">
+            <label class="text-4xl">グループ名</label>
+            <span class="focus_line"></span>
         </div>
 
+        <!-- メンバー -->
+        <div class="grid mr-auto ml-auto mt-11 bg-amber-300 w-4/5">
+            <input class="mr-auto ml-auto mt-24 text-3xl font-light w-4/5 h-24 rounded-3xl" type="text">
+            <button class="mr-auto ml-auto"><img src="" alt="追加ボタン"></button>
+        </div>
+        <button class="mt-24 text-6xl bg-red-200 font-light px-12 py-6 rounded-xl">作成</button>
     </main>
 </body>
 
