--- a/frontend/src/main/resources/html/setting_user/group_name.html
+++ b/frontend/src/main/resources/html/setting_user/group_name.html
@@ -91,7 +91,8 @@
         </div>
 
         <!-- メンバー -->
-        <div class="grid mr-auto ml-auto mt-11 bg-amber-300 w-4/5">
+        <p class="text-6xl mt-10 mb-24 text-center text-orange-500">グループメンバーを追加してください</p>
+        <div class="grid mr-auto ml-auto mt-11 bg-amber-100 w-4/5">
             <input class="mr-auto ml-auto mt-24 text-3xl font-light w-4/5 h-24 rounded-3xl" type="text">
             <button class="mr-auto ml-auto"><img src="" alt="追加ボタン"></button>
         </div>
