作成ボタンを真ん中寄せ

--- a/frontend/src/main/resources/html/setting_user/group_name.html
+++ b/frontend/src/main/resources/html/setting_user/group_name.html
@@ -73,10 +73,11 @@
             color: #E07448;
             font-size: x-large;
         }
+        
     </style>
 </head>
 
-<body class="flex justify-center items-center h-screen ">
+<body class="h-screen ">
 
     <!-- main -->
     <main class="h-full w-full">
@@ -92,11 +93,11 @@
 
         <!-- メンバー -->
         <p class="text-6xl mt-10 mb-24 text-center text-orange-500">グループメンバーを追加してください</p>
-        <div class="grid mr-auto ml-auto mt-11 bg-amber-100 w-4/5">
+        <div class="grid mr-auto ml-auto mt-11 bg-amber-100 w-4/5 h-1/2">
             <input class="mr-auto ml-auto mt-24 text-3xl font-light w-4/5 h-24 rounded-3xl" type="text">
-            <button class="mr-auto ml-auto"><img src="/frontend/images/add.png" alt="追加ボタン"></button>
+            <button class="mr-auto ml-auto mt-4"><img src="/frontend/images/add.png" alt="追加ボタン"></button>
         </div>
-        <button class="mt-24 text-6xl bg-red-200 font-light px-12 py-6 rounded-xl">作成</button>
+        <button class="block mr-auto ml-auto mt-24 text-6xl bg-orange-300 font-light px-12 py-6 rounded-2xl">作成</button>
     </main>
 </body>
 
