body {             height: 100vh;             overflow: hidden;         }         の追加

--- a/frontend/src/main/resources/html/setting_user/group_name.html
+++ b/frontend/src/main/resources/html/setting_user/group_name.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background-color: rgba(246, 219, 186, 0.5);
+            overflow: hidden;
         }
 
         /* グループ名作成時のアニメーション */
@@ -73,7 +74,6 @@
             color: #E07448;
             font-size: x-large;
         }
-        
     </style>
 </head>
 
