--- a/frontend/src/main/resources/html/join/invitation_code.html
+++ b/frontend/src/main/resources/html/join/invitation_code.html
@@ -8,6 +8,8 @@
     <style>
         body {
             background-color: rgba(246, 219, 186, 0.5);
+            height: 100vh;
+            overflow: hidden;
 
         }
     </style>
