--- a/frontend/src/main/resources/html/setting_user/new_user.html
+++ b/frontend/src/main/resources/html/setting_user/new_user.html
@@ -6,6 +6,10 @@
     <title>新規登録画面</title>
     <link rel="stylesheet" href="/frontend/src/main/resources/static/setting_user/new_user.css">
     <style>
+        body {
+            height: 100vh;
+            overflow: hidden;
+        }
         /* ボタン */
         /* ボタンの箱の形 */
         .login-button {
