--- a/frontend/src/main/resources/html/user/point_mgmt.html
+++ b/frontend/src/main/resources/html/user/point_mgmt.html
@@ -9,7 +9,7 @@
         <style>
             body {
                 height: 100vh;
-                overflow-y: hidden;
+                overflow: hidden;
                 header {
                     height: 20%;
                 }
