--- a/frontend/src/main/resources/html/user/task_info.html
+++ b/frontend/src/main/resources/html/user/task_info.html
@@ -8,7 +8,7 @@
         <style>
             body {
                 height: 100vh;
-                overflow-y: hidden;
+                overflow: hidden;
                 header {
                     height: 20%;
                 }
