--- a/frontend/src/main/resources/html/user/task_list.html
+++ b/frontend/src/main/resources/html/user/task_list.html
@@ -7,6 +7,7 @@
         <!-- Google font Icon -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"/>
         <style>
+            
             #add_circle {
             font-size: 60px;
             color: white;
@@ -27,7 +28,7 @@
             }
             body {
                 height: 100vh;
-                overflow-y: hidden;
+                overflow: hidden;
                 header {
                     height: 20%;
                 }
