homeページにフォントのリンクを追加した

--- a/frontend/src/main/resources/html/user/home.html
+++ b/frontend/src/main/resources/html/user/home.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Title</title>
-    <link rel="stylesheet" href="/frontend/src/main/resources/static/user/home.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/frontend/src/main/resources/static/user/output.css" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <style>
@@ -147,7 +150,7 @@
     </style>
 </head>
 
-<body class="bg-orange-100 m-0 p-0 box-border">
+<body class="bg-orange-100 m-0 p-0 box-border font-kiwi-maru"">
     <!-- header要素 -->
     <header class="h-40 bg-orange-100 flex items-center">
         <!-- ハンバーガーメニュー -->
