サイドメニューの文字の大きさを変更

--- a/frontend/src/main/resources/html/user/home.html
+++ b/frontend/src/main/resources/html/user/home.html
@@ -161,11 +161,11 @@
         <!-- メニューオーバーレイ -->
         <!-- TODO:表示メニューの調整 -->
         <nav>
-            <ul class="menu bg-orange-200">
-                <li class="menu-list "><a href="#" class="pt-24 pb-2 px-4  block ">ロゴ</a></li>
-                <li class="menu-list"><a href="#" class="py-2 px-4  block hover:text-white">ポイント</a></li>
-                <li class="menu-list"><a href="#" class="py-2 px-4 block hover:text-white">タスク管理</a></li>
-                <li class="menu-list"><a href="#" class="py-2 px-4 block hover:text-white">グループ管理</a></li>
+            <ul class="menu bg-orange-200 text-center">
+                <li class="menu-list "><a href="#" class="text-5xl pt-24 pb-2 px-4  block ">ロゴ</a></li>
+                <li class="menu-list"><a href="#" class="text-5xl py-2 px-4  block hover:text-white">ポイント</a></li>
+                <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">タスク管理</a></li>
+                <li class="menu-list"><a href="#" class="text-5xl py-2 px-4 block hover:text-white">グループ管理</a></li>
             </ul>
         </nav>
 
